# Library-Management-C

./: CMakeLists.txt  READ ME.txt  README.md  book_management.c  book_management.h  books.txt  details.txt  loans.c  loans.h  loans.txt  main.c  regOrLogin.c  regOrLogin.h
